--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/netinfo": "^9.5.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-documents/picker": "^10.1.7",
-    "@react-native-firebase/app": "^23.4.1",
-    "@react-native-firebase/messaging": "^23.4.1",
     "@react-native/new-app-screen": "0.81.4",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/elements": "^2.6.4",
@@ -30,7 +28,7 @@
     "lottie-react-native": "^7.3.4",
     "npm": "^11.6.2",
     "react": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "^0.83.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.29.0",
