--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,6 +27,9 @@ target 'WhitePeaony' do
     :hermes_enabled => true
   )
 
+  # ✅ React Native Permissions
+  pod 'RNPermissions', :path => '../node_modules/react-native-permissions'
+
   post_install do |installer|
     react_native_post_install(
       installer,
