--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-documents/picker": "^10.1.7",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-native/new-app-screen": "0.81.4",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/elements": "^2.6.4",
@@ -29,6 +30,7 @@
     "npm": "^11.6.2",
     "react": "19.1.0",
     "react-native": "^0.83.1",
+    "react-native-audio": "^4.3.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.29.0",
