--- a/ios/WhitePeaony/Info.plist
+++ b/ios/WhitePeaony/Info.plist
@@ -45,10 +45,10 @@
 	<string>We need your location to provide location-based services.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app requires microphone access for recording audio.</string>
-	<key>NSSpeechRecognitionUsageDescription</key>
-    <string>Voice search needs speech recognition</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app requires photo library access to upload images.</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>Voice search needs speech recognition</string>
 	<key>NSUserTrackingUsageDescription</key>
 	<string>This app collects usage data to improve your experience.</string>
 	<key>RCTNewArchEnabled</key>
@@ -63,6 +63,12 @@
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>arm64</string>
+	</array>
+	<key>UIStatusBarStyle</key>
+	<string></string>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
