--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "npm": "^11.6.2",
     "react": "19.1.0",
     "react-native": "^0.83.1",
-    "react-native-audio": "^4.3.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.29.0",
@@ -56,6 +55,7 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
+    "@bam.tech/react-native-make": "^3.0.3",
     "@react-native-community/cli": "20.0.0",
     "@react-native-community/cli-platform-android": "20.0.0",
     "@react-native-community/cli-platform-ios": "20.0.0",
