--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/elements": "^2.6.4",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
+    "@reduxjs/toolkit": "^2.11.2",
     "@rneui/base": "^0.0.0-edge.2",
     "@rneui/themed": "^0.0.0-edge.2",
     "axios": "^1.6.1",
@@ -49,6 +50,8 @@
     "react-native-video": "^6.16.1",
     "react-native-webview": "^13.16.0",
     "react-native-worklets": "^0.7.2",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
@@ -65,6 +68,7 @@
     "@react-native/typescript-config": "0.81.4",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
+    "@types/react-redux": "^7.1.34",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
