--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-documents/picker": "^10.1.7",
     "@react-native-firebase/app": "^23.8.5",
     "@react-native-firebase/messaging": "^23.8.5",
+    "@react-native-google-signin/google-signin": "^16.1.1",
     "@react-native-voice/voice": "^3.2.4",
     "@react-native/new-app-screen": "0.81.4",
     "@react-navigation/bottom-tabs": "^7.4.7",
