--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
     "react-native-toast-message": "^2.3.3",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-video": "^6.16.1",
     "react-native-webview": "^13.16.0",
     "react-native-worklets": "^0.7.2",
