--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
+    "react-native-share": "^12.2.5",
     "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
     "react-native-video": "^6.16.1",
